apparently negative z-index on a parent div can turn an input field read only. Fixed after hours

--- a/client/src/components/Signup/Signup.css
+++ b/client/src/components/Signup/Signup.css
@@ -7,7 +7,7 @@
     height: 92.1vh;
     width: 100vw;
     position: relative;
-    z-index: -1;
+    z-index: 1;
 }
 .FormInput {
     height: 35px;
